k8s/worker-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: gcr.io/nattapon/nui_worker
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
